<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:padding="4dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/sms_avatar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/sms_avatar"
        android:textSize="40sp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sms_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/sms_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sms_date"
        app:layout_constraintStart_toEndOf="@+id/sms_avatar"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/sms_sender"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:text="@string/sms_sender"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/sms_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/sms_message" />

    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/sms_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sms_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sms_data"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>