<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="4dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/sender_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sms_sender"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_senders_sms_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/sender_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/sms_list_item"
        tools:itemCount="3"
        android:layout_marginTop="12dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/failed_load_sms_message_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/sender_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/failed_load_sms_message_title"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#F44336"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/failed_load_sms_message_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/failed_load_sms_message_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/failed_load_sms_message_description"
        android:textColor="#009688"/>

</androidx.constraintlayout.widget.ConstraintLayout>